# shion

./: .env.example  Cargo.toml  Makefile
migrations/: 20250821022527_init.down.sql  20250821022527_init.up.sql  20250829021820_add_stats.down.sql  20250829021820_add_stats.up.sql  20250905151846_add_player_country.down.sql  20250905151846_add_player_country.up.sql
src/: lib.rs  lifecycle.rs  main.rs  poc.rs  settings.rs
src/adapters/: agdb_api.rs  ip_api.rs  mod.rs
src/api/: match_details.rs  matches.rs  mod.rs  players.rs
src/backfill/: mod.rs
src/common/: error.rs  mod.rs  state.rs
src/entities/: match_details.rs  matches.rs  players.rs  stats.rs
src/fixer/: mod.rs
src/models/: location.rs  match_details.rs  matches.rs  mod.rs  players.rs  stats.rs
src/processor/: mod.rs
src/repositories/: match_details.rs  matches.rs  mod.rs  players.rs  stats.rs
src/usecases/: location.rs  match_details.rs  matches.rs  mod.rs  players.rs
