[package]
name = "shion"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["default", "serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
skillratings = "0.27.1"
sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "mysql", "rust_decimal", "derive", "chrono"] }
steam-api-client = "1.0.0"
steamid-ng = "2.0.0"
tracing = "0.1.41"
